<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16sp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:contentDescription="@string/result" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/battle_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2020/01/01"
            android:textColor="@color/baseTextColor"
            android:textSize="@dimen/text_size_basic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_team"
                android:textColor="@color/baseTextColor"
                android:textSize="@dimen/text_size_basic" />

            <TextView
                android:id="@+id/team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team 1"
                android:textColor="@color/baseTextColor"
                android:textSize="@dimen/text_size_basic" />

        </LinearLayout>

        <TextView
            android:id="@+id/op_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opponent"
            android:textColor="@color/baseTextColor"
            android:textSize="@dimen/text_size_basic" />

        <TextView
            android:id="@+id/op_party1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:text="Magikarp Magikarp Magikarp"
            android:textColor="@color/baseTextColor"
            android:textSize="@dimen/text_size_basic" />

        <TextView
            android:id="@+id/op_party2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:text="Magikarp Magikarp Magikarp"
            android:textColor="@color/baseTextColor"
            android:textSize="@dimen/text_size_basic" />
    </LinearLayout>

</LinearLayout>