<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.record.RecordInputFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15sp"
            android:paddingTop="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:id="@+id/season_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:textColor="@color/baseTextColor"
                android:textSize="@dimen/text_size_basic"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/season_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="300sp"
                android:layout_height="25sp"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/text_size_basic" />

            <TextView
                android:id="@+id/team_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/team"
                android:textColor="@color/baseTextColor"
                android:textSize="@dimen/text_size_basic"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/team_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="300sp"
                android:layout_height="25sp"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/text_size_basic" />

            <TextView
                android:id="@+id/my_pokemon_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/my_pokemon"
                android:textColor="@color/baseTextColor"
                android:textSize="@dimen/text_size_basic"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/my_pokemon_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/my_pokemon_check_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/my_pokemon_1"
                        android:layout_width="150sp"
                        android:layout_height="wrap_content"
                        android:text="Magikarp"
                        android:textColor="@color/baseTextColor"
                        android:textSize="@dimen/text_size_basic" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_looks_one_24dp" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/opponent_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/opponent_pokemon"
                android:textColor="@color/baseTextColor"
                android:textSize="@dimen/text_size_basic"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/opponent_check_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/opponent_pokemon_1"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/opponent_check_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/opponent_pokemon_2"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/opponent_check_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/opponent_pokemon_3"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/opponent_check_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/opponent_pokemon_4"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/opponent_check_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/opponent_pokemon_5"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/opponent_check_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/opponent_pokemon_6"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/result_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/result"
                android:textColor="@color/baseTextColor"
                android:textSize="@dimen/text_size_basic"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginBottom="16sp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_win"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30sp"
                    android:text="@string/win" />

                <RadioButton
                    android:id="@+id/radio_lose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lose" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16sp"
        android:contentDescription="@string/done"
        android:scaleType="centerInside"
        android:src="@drawable/ic_check_40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
