<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.pokemontool.ui.team.TeamDetailViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.team.TeamDetailFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="15sp"
                android:paddingTop="20sp"
                android:paddingEnd="20sp">

                <TextView
                    android:id="@+id/team_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    android:textColor="@color/baseTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/team_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:inputType="@{viewModel.inputType}"
                    android:text="@{viewModel.team.teamName}" />

                <CheckBox
                    android:id="@+id/archive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="16sp"
                    android:layout_marginEnd="20sp"
                    android:checked="@{viewModel.team.archive}"
                    android:enabled="@{viewModel.getCheckBoxDisable()}"
                    android:text="@string/archive" />

                <TextView
                    android:id="@+id/pokemon_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/pokemon"
                    android:textColor="@color/baseTextColor"
                    android:textSize="14sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp">

                    <TextView
                        android:id="@+id/pokemon_1_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_1"
                        android:textColor="@color/baseTextColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <AutoCompleteTextView
                        android:id="@+id/pokemon_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="@{viewModel.inputType}"
                        android:text="@{viewModel.team.pokemon1}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintHorizontal_weight="9"
                        app:layout_constraintStart_toEndOf="@+id/pokemon_1_label"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp">

                    <TextView
                        android:id="@+id/pokemon_2_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_2"
                        android:textColor="@color/baseTextColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/pokemon_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="@{viewModel.inputType}"
                        android:text="@{viewModel.team.pokemon2}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintHorizontal_weight="9"
                        app:layout_constraintStart_toEndOf="@+id/pokemon_2_label"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp">

                    <TextView
                        android:id="@+id/pokemon_3_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_3"
                        android:textColor="@color/baseTextColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/pokemon_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="@{viewModel.inputType}"
                        android:text="@{viewModel.team.pokemon3}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintHorizontal_weight="9"
                        app:layout_constraintStart_toEndOf="@+id/pokemon_3_label"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp">

                    <TextView
                        android:id="@+id/pokemon_4_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_4"
                        android:textColor="@color/baseTextColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/pokemon_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="@{viewModel.inputType}"
                        android:text="@{viewModel.team.pokemon4}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintHorizontal_weight="9"
                        app:layout_constraintStart_toEndOf="@+id/pokemon_4_label"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp">

                    <TextView
                        android:id="@+id/pokemon_5_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_5"
                        android:textColor="@color/baseTextColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/pokemon_5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="@{viewModel.inputType}"
                        android:text="@{viewModel.team.pokemon5}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintHorizontal_weight="9"
                        app:layout_constraintStart_toEndOf="@+id/pokemon_5_label"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp">

                    <TextView
                        android:id="@+id/pokemon_6_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_6"
                        android:textColor="@color/baseTextColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/pokemon_6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="@{viewModel.inputType}"
                        android:text="@{viewModel.team.pokemon6}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintHorizontal_weight="9"
                        app:layout_constraintStart_toEndOf="@+id/pokemon_6_label"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16sp"
            android:contentDescription="@string/done"
            android:scaleType="centerInside"
            android:src="@drawable/ic_check_40dp"
            android:visibility="@{viewModel.doneButtonVisible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/scrollView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16sp"
            android:contentDescription="@string/done"
            android:scaleType="centerInside"
            android:src="@drawable/ic_edit_40dp"
            android:visibility="@{viewModel.editButtonVisible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/scrollView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
